Fixed small issue with the size of the coe-meme figure appearing too small on small screens.

--- a/assets/css/frontpage.css
+++ b/assets/css/frontpage.css
@@ -3866,6 +3866,10 @@ body.blog-lightbox-open {
     max-width: 100%;
   }
 
+  .COE-meme {
+    max-width: 68%;
+  }
+
   .blog-bubble-grid {
     grid-template-columns: 1fr;
   }
